creditas-sf/force-app/main/default/objects/GeneralSection__c/GeneralSection__c.object-meta.xml
<CustomObject>
    <label>Seção Geral</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Sessão Geral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seções Gerais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>