creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/CrivoQueryObservation__c.field-meta.xml
<CustomField>
    <fullName>CrivoQueryObservation__c</fullName>
    <label>Observação da consulta crivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>