creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/CrivoQueryReason__c.field-meta.xml
<CustomField>
    <fullName>CrivoQueryReason__c</fullName>
    <label>Motivo da consulta crivo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>