creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/CrivoQuerySubReason__c.field-meta.xml
<CustomField>
    <fullName>CrivoQuerySubReason__c</fullName>
    <label>Sub-motivo da consulta crivo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>