creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/FacialBiometricAnalysisObservation__c.field-meta.xml
<CustomField>
    <fullName>FacialBiometricAnalysisObservation__c</fullName>
    <label>Observação da análise biometria facial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>