creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/FacialBiometricAnalysisReason__c.field-meta.xml
<CustomField>
    <fullName>FacialBiometricAnalysisReason__c</fullName>
    <label>Motivo da análise biometria facial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>