creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/FacialBiometricAnalysisRejectReason__c.field-meta.xml
<CustomField>
    <fullName>FacialBiometricAnalysisRejectReason__c</fullName>
    <label>Motivo Rejeição Biometria Facial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biometria - CPF com alerta no CertiFace</fullName>
            </value>
            <value>
                <fullName>Biometria - Divergente da cadastrada</fullName>
            </value>
            <value>
                <fullName>Biometria - Realizada sem o consentimento do cliente</fullName>
            </value>
            <value>
                <fullName>Biometria - Fotografia</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>