creditas-sf/force-app/main/default/objects/GeneralSection__c/fields/FacialBiometricAnalysisSubReason__c.field-meta.xml
<CustomField>
    <fullName>FacialBiometricAnalysisSubReason__c</fullName>
    <label>Sub-motivo da análise biometria facial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>